all project dependencies updated

--- a/.dev/files/usr/local/etc/php.ini
+++ b/.dev/files/usr/local/etc/php.ini
@@ -4,7 +4,7 @@ log_errors = On
 error_reporting = E_ALL
 display_errors = stderr
 error_log = /proc/self/fd/2
-memory_limit = 256M
+memory_limit = 1G
 
 opcache.enable=0
 opcache.enable_cli=0
