--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -1,12 +1,14 @@
 monolog:
   handlers:
     main:
+      type: fingers_crossed
+      action_level: info
+      handler: nested
+      excluded_http_codes: [404, 405]
+    nested:
       type: stream
-      path: "php://stderr"
+      path: "php://stdout"
       level: debug
-      excluded_404s:
-        # regex: exclude all 404 errors from the logs
-        - ^/
     console:
       type: console
       process_psr_3_messages: false
