combined type generation improvements

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -111,3 +111,7 @@ services:
     class: Negotiation\Negotiator
 
   App\OpenAPI\ErrorHandling\ErrorHandlerInterface: '@App\OpenAPI\ErrorHandling\LoggingErrorHandler'
+
+  App\Utility\EncoderDecorator:
+    decorates: Symfony\Component\Serializer\Encoder\EncoderInterface
+    arguments: ['@App\Utility\EncoderDecorator.inner']
