--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
-        "doctrine/collections": "1.*",
         "fzaninotto/faker": "1.*",
         "guzzlehttp/guzzle": "6.*",
         "myclabs/php-enum": "^1.6",
         "psr/simple-cache": "^1.0",
+        "ramsey/collection": "^1.0",
         "spiral/roadrunner": "1.*",
         "symfony/cache": "4.*",
         "symfony/console": "4.*",
