#22 server path in routing * global server paths in routing

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -43,6 +43,7 @@ services:
     autoconfigure: true
     public: false
     bind:
+      $serversParser: '@App\OpenAPI\Parsing\ServersParser'
       $pathCollectionParser: '@App\OpenAPI\Parsing\PathCollectionParser'
       $pathParser: '@App\OpenAPI\Parsing\PathParser'
       $parameterParser: '@App\OpenAPI\Parsing\EndpointParameterParser'
