--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -1,9 +1,9 @@
 imports:
-  - { resource: '%vendor_dir%/symplify/easy-coding-standard/config/set/clean-code.yaml' }
-  - { resource: '%vendor_dir%/symplify/easy-coding-standard/config/set/common.yaml' }
-  - { resource: '%vendor_dir%/symplify/easy-coding-standard/config/set/php71.yaml' }
-  - { resource: '%vendor_dir%/symplify/easy-coding-standard/config/set/psr12.yaml' }
-  - { resource: '%vendor_dir%/symplify/easy-coding-standard/config/set/symfony.yaml' }
+  - { resource: 'vendor/symplify/easy-coding-standard/config/set/clean-code.yaml' }
+  - { resource: 'vendor/symplify/easy-coding-standard/config/set/common.yaml' }
+  - { resource: 'vendor/symplify/easy-coding-standard/config/set/php71.yaml' }
+  - { resource: 'vendor/symplify/easy-coding-standard/config/set/psr12.yaml' }
+  - { resource: 'vendor/symplify/easy-coding-standard/config/set/symfony.yaml' }
 
 services:
   PhpCsFixer\Fixer\PhpUnit\PhpUnitTestAnnotationFixer:
