--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,9 @@
 build:
   nodes:
     analysis:
+      environment:
+        php:
+          version: 7.4
       project_setup:
         override:
           - 'true'
