--- a/tests/Resources/swagger-files/value-generation.yaml
+++ b/tests/Resources/swagger-files/value-generation.yaml
@@ -1,9 +1,13 @@
 openapi: "3.0.0"
+info:
+  title: 'test'
+  version: 1.0.0
 paths:
   /content:
     get:
       responses:
         200:
+          description: 'test'
           content:
             application/json:
               schema:
@@ -54,9 +58,9 @@ paths:
                   dateTime:
                     type: string
                     format: 'date-time'
-                  uuid:
-                    type: string
-                    format: uuid
+#                  uuid:
+#                    type: string
+#                    format: uuid
                   email:
                     type: string
                     format: email
