feature: example generation * additional test case

--- a/test/resources/openapi-files/example-usage/media-type-example.yaml
+++ b/test/resources/openapi-files/example-usage/media-type-example.yaml
@@ -16,6 +16,6 @@ paths:
                   key:
                     type: string
                     enum:
-                      - value
+                      - generatedValue
               example:
                 key: 'exampleValue'
