--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -12,6 +12,9 @@ build:
           version: 'go1.14'
       tests:
         override:
+          - go mod download
+          - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
+          - golangci-lint run
           - command: go test -v $(go list ./... | grep -v vendor) -coverprofile=cover.out
             coverage:
               file: 'cover.out'
