--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -10,8 +10,8 @@ build:
       environment:
         go:
           version: 'go1.14'
-      dependencies:
-        before:
+      project_setup:
+        override:
           - go mod download
           - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
       tests:
