--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -11,9 +11,11 @@ build:
         go:
           version: 'go1.14'
       project_setup:
-        before:
+        override:
           - go mod download
           - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
+          - cd cmd/swagger-mock
+          - go build -v
       tests:
         override:
           - golangci-lint run
