feature: uuid support

--- a/test/resources/openapi-files/value-generation.yaml
+++ b/test/resources/openapi-files/value-generation.yaml
@@ -60,9 +60,9 @@ paths:
 #                  dateTime:
 #                    type: string
 #                    format: 'date-time'
-#                  uuid:
-#                    type: string
-#                    format: uuid
+                  uuid:
+                    type: string
+                    format: uuid
 #                  email:
 #                    type: string
 #                    format: email
