--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,10 @@ name: CI
 on:
   push:
     branches: [ * ]
+    branches-ignore: [ master ]
   pull_request:
     branches: [ * ]
+    branches-ignore: [ master ]
 
 jobs:
   build:
