--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [ * ]
+    branches: [ '*' ]
     branches-ignore: [ master ]
   pull_request:
-    branches: [ * ]
+    branches: [ '*' ]
     branches-ignore: [ master ]
 
 jobs:
