--- a/test/resources/openapi-files/value-generation.yaml
+++ b/test/resources/openapi-files/value-generation.yaml
@@ -37,56 +37,59 @@ paths:
                   - writeOnlyArray
                   - writeOnlyObject
                 properties:
-#                  rangedInteger:
-#                    type: integer
-#                    minimum: 1
-#                    maximum: 5
-#                  rangedFloat:
-#                    type: number
-#                    minimum: 1.0
-#                    maximum: 1.5
-#                    multipleOf: 0.1
+                  rangedInteger:
+                    type: integer
+                    minimum: 1
+                    maximum: 5
+                  rangedFloat:
+                    type: number
+                    minimum: 1.0
+                    maximum: 1.5
+                    multipleOf: 0.1
                   enum:
                     type: string
                     enum:
                       - enumValue1
                       - enumValue2
                       - enumValue3
-#                  date:
-#                    type: string
-#                    format: date
-#                  dateTime:
-#                    type: string
-#                    format: 'date-time'
+                  date:
+                    type: string
+                    format: date
+                  dateTime:
+                    type: string
+                    format: 'date-time'
                   uuid:
                     type: string
                     format: uuid
-#                  email:
-#                    type: string
-#                    format: email
-#                  uri:
-#                    type: string
-#                    format: uri
-#                  hostname:
-#                    type: string
-#                    format: hostname
-#                  ipv4:
-#                    type: string
-#                    format: ipv4
-#                  ipv6:
-#                    type: string
-#                    format: ipv6
-#                  byte:
-#                    type: string
-#                    format: byte
-#                  shortString:
-#                    type: string
-#                    minLength: 2
-#                    maxLength: 4
-#                  longString:
-#                    type: string
-#                    minLength: 100
-#                    maxLength: 105
+                  email:
+                    type: string
+                    format: email
+                  uri:
+                    type: string
+                    format: uri
+                  hostname:
+                    type: string
+                    format: hostname
+                  ipv4:
+                    type: string
+                    format: ipv4
+                  ipv6:
+                    type: string
+                    format: ipv6
+                  byte:
+                    type: string
+                    format: byte
+                  html:
+                    type: string
+                    format: html
+                  shortString:
+                    type: string
+                    minLength: 2
+                    maxLength: 4
+                  longString:
+                    type: string
+                    minLength: 100
+                    maxLength: 105
 #                  array:
 #                    type: array
 #                    minItems: 5
