--- a/test/resources/openapi-files/value-generation.yaml
+++ b/test/resources/openapi-files/value-generation.yaml
@@ -96,20 +96,20 @@ paths:
                     maxItems: 5
                     items:
                       type: integer
-#                  uniqueArrayOfObjects:
-#                    type: array
-#                    uniqueItems: true
-#                    minItems: 1
-#                    maxItems: 5
-#                    items:
-#                      type: object
-#                      required:
-#                        - key
-#                      properties:
-#                        key:
-#                          type: string
-#                          enum:
-#                            - value
+                  uniqueArrayOfObjects:
+                    type: array
+                    uniqueItems: true
+                    minItems: 1
+                    maxItems: 5
+                    items:
+                      type: object
+                      required:
+                        - key
+                      properties:
+                        key:
+                          type: string
+                          enum:
+                            - value
 #                  freeForm:
 #                    type: object
 #                    additionalProperties: {}
