feature: free form generator

--- a/test/resources/openapi-files/value-generation.yaml
+++ b/test/resources/openapi-files/value-generation.yaml
@@ -110,9 +110,16 @@ paths:
                           type: string
                           enum:
                             - value
-#                  freeForm:
-#                    type: object
-#                    additionalProperties: {}
+                  freeForm:
+                    type: object
+                    minProperties: 1
+                    maxProperties: 1
+                    additionalProperties: {}
+                  freeFormWithBooleanOption:
+                    type: object
+                    minProperties: 1
+                    maxProperties: 1
+                    additionalProperties: true
 #                  hashMap:
 #                    type: object
 #                    additionalProperties:
