--- a/test/resources/openapi-files/combined-types.yaml
+++ b/test/resources/openapi-files/combined-types.yaml
@@ -16,7 +16,9 @@ paths:
                   - oneOfProperty
                   - allOfProperty
                   - anyOfProperty
+                  - deepAllOfProperty
                 properties:
+
                   oneOfProperty:
                     oneOf:
                       - type: object
@@ -41,43 +43,105 @@ paths:
                             maximum: 0
                           title:
                             type: string
-#                  allOfProperty:
-#                    allOf:
-#                      - type: object
-#                        required:
-#                          - id
-#                          - name
-#                        properties:
-#                          id:
-#                            type: integer
-#                          name:
-#                            type: string
-#                      - type: object
-#                        required:
-#                          - id
-#                          - title
-#                        properties:
-#                          id:
-#                            type: integer
-#                          title:
-#                            type: string
-#                  anyOfProperty:
-#                    anyOf:
-#                      - type: object
-#                        required:
-#                          - id
-#                          - name
-#                        properties:
-#                          id:
-#                            type: integer
-#                          name:
-#                            type: string
-#                      - type: object
-#                        required:
-#                          - id
-#                          - title
-#                        properties:
-#                          id:
-#                            type: integer
-#                          title:
-#                            type: string
+
+                  allOfProperty:
+                    allOf:
+                      - type: object
+                        required:
+                          - id
+                          - name
+                        properties:
+                          id:
+                            type: integer
+                            minimum: 0
+                            maximum: 0
+                          name:
+                            type: string
+                            enum:
+                              - name
+                      - type: object
+                        required:
+                          - id
+                          - title
+                        properties:
+                          id:
+                            type: integer
+                            minimum: 0
+                            maximum: 0
+                          title:
+                            type: string
+                            enum:
+                              - title
+
+                  anyOfProperty:
+                    anyOf:
+                      - type: object
+                        required:
+                          - id
+                          - name
+                        properties:
+                          id:
+                            type: integer
+                            minimum: 0
+                            maximum: 0
+                          name:
+                            type: string
+                      - type: object
+                        required:
+                          - id
+                          - title
+                        properties:
+                          id:
+                            type: integer
+                            minimum: 0
+                            maximum: 0
+                          title:
+                            type: string
+
+                  deepAllOfProperty:
+                    allOf:
+                      - type: object
+                        required:
+                          - id
+                          - name
+                        properties:
+                          id:
+                            type: integer
+                            minimum: 0
+                            maximum: 0
+                          name:
+                            type: string
+                            enum:
+                              - name
+                      - type: object
+                        required:
+                          - id
+                          - title
+                        properties:
+                          id:
+                            type: integer
+                            minimum: 0
+                            maximum: 0
+                          title:
+                            type: string
+                            enum:
+                              - title
+                      - allOf:
+                          - anyOf:
+                              - type: object
+                                required:
+                                  - description
+                                properties:
+                                  description:
+                                    type: string
+                                    enum:
+                                      - description
+                          - oneOf:
+                              - type: object
+                                required:
+                                  - type
+                                properties:
+                                  type:
+                                    type: string
+                                    enum:
+                                      - type
