--- a/test/resources/openapi-files/UnexpectedErrorPage.yaml
+++ b/test/resources/openapi-files/UnexpectedErrorPage.yaml
@@ -20,6 +20,7 @@ paths:
                     uniqueItems: true
                     minItems: 2
                     maxItems: 2
+                    default: ['value']
                     items:
                       type: string
                       enum: ['value']
