--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,11 +28,10 @@ jobs:
           go build -v
           cd ../..
 
-      - name: Set up linter
-        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
-
-      - name: Run linter
-        run: golangci-lint run
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v1.2.1
+        with:
+          version: v1.26
 
       - name: Run tests
         run: go test -v $(go list ./... | grep -v vendor)
