--- a/examples/persons.yaml
+++ b/examples/persons.yaml
@@ -39,7 +39,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Persons"
+                $ref: "#/components/schemas/Person"
 components:
   schemas:
     Person:
@@ -62,6 +62,8 @@ components:
         salary:
           type: number
           format: float
+          minimum: 100
+          maximum: 1000000
         birthDate:
           type: string
           format: date
