--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,57 +1,25 @@
 name: Build Release
 
-#on: release
 on:
   push:
     branches: [ '*' ]
+#on:
+#  release:
+#    types: [created]
 
 jobs:
   release-linux-amd64:
     name: release linux/amd64
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # build and publish in parallel: linux/386, linux/amd64, windows/386, windows/amd64, darwin/386, darwin/amd64
+        goos: [linux] #, windows, darwin]
+        goarch: [amd64] #["386", amd64]
     steps:
-      - uses: actions/checkout@master
-      - name: compile and release
-        uses: ngs/go-release.action@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GOARCH: amd64
-          GOOS: linux
-          PROJECT_ROOT: "/project"
-          EXTRA_FILES: "LICENSE"
-#  release-linux-arm64:
-#    name: release linux/amd64
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@master
-#      - name: compile and release
-#        uses: ngs/go-release.action@v1.0.2
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          GOARCH: arm64
-#          GOOS: linux
-#          EXTRA_FILES: "LICENSE"
-#  release-darwin-amd64:
-#    name: release darwin/amd64
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@master
-#      - name: compile and release
-#        uses: ngs/go-release.action@v1.0.2
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          GOARCH: amd64
-#          GOOS: darwin
-#          EXTRA_FILES: "LICENSE"
-#  release-windows-amd64:
-#    name: release windows/amd64
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@master
-#      - name: compile and release
-#        uses: ngs/go-release.action@v1.0.2
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          GOARCH: amd64
-#          GOOS: windows
-#          EXTRA_FILES: "LICENSE"
+      - uses: actions/checkout@v2
+      - uses: wangyoucao577/go-release-action@master
+        with:
+          project_path: ./cmd/openapi-mock
+          binary_name: openapi-mock
+          github_token: ${{ secrets.GITHUB_TOKEN }}
