--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -10,10 +10,12 @@ on:
 
 jobs:
   release-docker:
-    uses: docker/build-push-action@v1
-    with:
-      username: ${{ secrets.DOCKER_USERNAME }}
-      password: ${{ secrets.DOCKER_PASSWORD }}
-      repository: muonsoft/openapi-mock
-      always_pull: true
-      tag_with_ref: true
+    name: release docker
+    steps:
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: muonsoft/openapi-mock
+        always_pull: true
+        tag_with_ref: true
