--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -12,10 +12,10 @@ jobs:
   release-docker:
     name: release docker
     steps:
-      uses: docker/build-push-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: muonsoft/openapi-mock
-        always_pull: true
-        tag_with_ref: true
+      - uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: muonsoft/openapi-mock
+          always_pull: true
+          tag_with_ref: true
