final release configs

--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -1,12 +1,8 @@
 name: Build docker release
 
-#on:
-#  release:
-#    types: [created]
-
 on:
-  push:
-    branches: [ '*' ]
+  release:
+    types: [created]
 
 jobs:
   release-docker:
