--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -10,11 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Set release version env
+        run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF:10}
       - uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: muonsoft/openapi-mock
           always_pull: true
+          build_args: RELEASE_VERSION=${{ env.RELEASE_VERSION }}
           tags: latest
           tag_with_ref: true
