--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -10,14 +10,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set release version env
-        run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF:10}
+
+      - name: Set APP_VERSION env
+        run: echo ::set-env name=APP_VERSION::$(echo ${GITHUB_REF} | rev | cut -d'/' -f 1 | rev )
+      - name: Set BUILD_TIME env
+        run: echo ::set-env name=BUILD_TIME::$(date)
+      - name: Environment Printer
+        uses: managedkaos/print-env@v1.0
+
       - uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: muonsoft/openapi-mock
           always_pull: true
-          build_args: RELEASE_VERSION=${{ env.RELEASE_VERSION }}
+          build_args: APP_VERSION=${{ env.APP_VERSION }}, BUILD_TIME=${{ env.BUILD_TIME }}
           tags: latest
           tag_with_ref: true
