--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -5,20 +5,29 @@ on:
     types: [created]
 
 jobs:
-  release-linux-amd64:
-    name: release linux/amd64
+  releases-matrix:
+    name: Release Matrix
     runs-on: ubuntu-latest
     strategy:
       matrix:
         goos: [linux, windows, darwin]
-        goarch: [amd64] #["386", amd64]
+        goarch: [amd64]
     steps:
       - uses: actions/checkout@v2
-      - name: Set release version env
-        run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF:10}
+
+      - name: Set APP_VERSION env
+        run: echo ::set-env name=APP_VERSION::$(echo ${GITHUB_REF} | rev | cut -d'/' -f 1 | rev )
+      - name: Set BUILD_TIME env
+        run: echo ::set-env name=BUILD_TIME::$(date)
+      - name: Environment Printer
+        uses: managedkaos/print-env@v1.0
+
       - uses: wangyoucao577/go-release-action@master
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          goos: ${{ matrix.goos }}
+          goarch: ${{ matrix.goarch }}
           project_path: ./cmd/openapi-mock
           binary_name: openapi-mock
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          ldflags: -w -s
+          build_flags: -v
+          ldflags: -X "main.version=${{ env.APP_VERSION }}" -X "main.buildTime=${{ env.BUILD_TIME }}"
