--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -16,9 +16,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set APP_VERSION env
-        run: echo ::set-env name=APP_VERSION::$(echo ${GITHUB_REF} | rev | cut -d'/' -f 1 | rev )
+        run: echo "APP_VERSION=$(echo ${GITHUB_REF} | rev | cut -d'/' -f 1 | rev )" >> $GITHUB_ENV
       - name: Set BUILD_TIME env
-        run: echo ::set-env name=BUILD_TIME::$(date)
+        run: echo "BUILD_TIME=$(date)" >> $GITHUB_ENV
       - name: Environment Printer
         uses: managedkaos/print-env@v1.0
 
