#63 fix: don't crash on invalid formats

--- a/test/resources/openapi-files/ValueGeneration.yaml
+++ b/test/resources/openapi-files/ValueGeneration.yaml
@@ -82,6 +82,9 @@ paths:
                   html:
                     type: string
                     format: html
+                  custom:
+                    type: string
+                    format: custom
                   shortString:
                     type: string
                     minLength: 2
