code-climate-coverage

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
           coverageCommand: go test -v ./... -coverprofile=c.out
-          prefix: "github.com/muonsoft/validation"
+          prefix: "github.com/muonsoft/openapi-mock"
